[package]
name = "RustTwitBot"
version = "0.1.0"
authors = ["Sergio Vera <sergio.vera.h@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "^0.7"
serde = "^1.0"
serde_derive = "^1.0"
chrono = "^0.4"